html_DATA = \
	argspwdenv.html \
	breakptlist.html \
	globaloptions.html \
	howdoi.html \
	invocation.html \
	localvars.html \
	memory.html \
	pgmoutput.html \
	pgmsettings.html \
	registers.html \
	sourcecode.html \
	stack.html \
	threads.html \
	tips.html \
	types.html \
	watches.html \
	xslt.html \
	index.html

htmldir = $(kde_htmldir)/en/kdbg

EXTRA_DIST = $(html_DATA)
